replace .getLast() call with explicit index access for Java 17 compatibility
List.getLast() was introduced in Java 21:

https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/util/List.html#getLast()

Our CI system currently requires Java 17 compatibility.